--- a/SRC/Index.html
+++ b/SRC/Index.html
@@ -23,7 +23,7 @@
     <div class="hero-text">
       <h1>Hola Todo el Mundo!,<br>Soy <span>Jefersson Bermudez</span></h1>
       <p>Este es Mi Portafolio</p>
-      <a href="about.html"><button>About Me</button></a>
+      <a href="about.html"><button>About ME</button></a>
       <div class="social-icons">
         <a href="#">🌐</a>
         <a href="#">🐱</a>
